Mad a start on improving the layout. About page picture component looks neat

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -21,3 +21,8 @@ blockquote {
 a { 
    // text-decoration: none;
 }
+
+picture {
+padding: 0 .25rem;
+width: 100%;
+    .picture_caption {text-align: center; font-weight: bold}}
