--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -15,8 +15,9 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-#content {
+.page {
   padding: 0 2rem;
+  max-width: 1000px;
   //Rudimentary responsive styles
   //iPhone 6
   @media only screen 
