--- a/src/scss/_colours.scss
+++ b/src/scss/_colours.scss
@@ -1,5 +1,10 @@
-$grey:gray;
-$darkgrey:darkgray;
-$lightgrey: lightgrey;
-$oil:#2c3e50;
-$white: rgba(250,250,250,1)
+/*
+* Global grayscle pallete.
+*/
+$purewhite: rgba(255,255,255,1);
+$white: rgba(250,250,250,1);
+$lightgrey: rgba(243,246,247,1);
+$grey: rgba(218,227,231,1);
+$darkgrey: rgba(206,218,222,1);
+$oil: rgba(44, 62, 80, 1);
+$black: rgba(0,0,0,1);
